Zmiana bezpieczenstwa bazy danych
Nowy plik docker-compose.yaml i polaczenie z baza danych przez uzytkownika z mniejszymi uprawnieniami

--- a/haveaseat-backend-main/haveaseat-api/haveaseat-api/appsettings.json
+++ b/haveaseat-backend-main/haveaseat-api/haveaseat-api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresDatabase": "Host=localhost;Database=have-a-db;User Id=postgres;Password=postgres"
+    "PostgresDatabase": "Host=localhost;Database=have-a-db;User Id=haveauser;Password=\"U~;2jv%kLt?3[GCqQ$^fF.6BE-8Nwr\";"
   }
 }
