--- a/haveaseat-backend-main/haveaseat-api/haveaseat-api/appsettings.json
+++ b/haveaseat-backend-main/haveaseat-api/haveaseat-api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresDatabase": "Host=localhost;Database=have-a-db;User Id=postgres;Password=postgres"
+    "PostgresDatabase": "Host=localhost;Database=have-a-db;User Id=postgres;Password=postgres;"
   }
 }
