--- a/haveaseat-backend-main/haveaseat-api/docs/toc.yml
+++ b/haveaseat-backend-main/haveaseat-api/docs/toc.yml
@@ -16,3 +16,5 @@
       href: Endpoints/authentication.md
     - name: Forbidden dates
       href: Endpoints/forbiddendates.md
+    - name: Map
+      href: Endpoints/map.md
